--- a/lab2.html
+++ b/lab2.html
@@ -1,20 +1,26 @@
 <html>
+    
     <head>
+        <link rel="stylesheet" href="style.css">
         <title>Welcome!</title>
     </head>
     <body>
         <h1>INST377 - Lab 2 - Contact Me</h1>
-        <form>
+        <form name="contactUs" method="get" action="lab2_successPage.html">
             <!-- Name -->
-            <label for="name">Name:</label>
-            <input type="text "id="name">
-            <br><br>
+            <div class="nameBox">
+                <label for="name">Name:</label>
+                <input type="text"id="name">
+            </div>
+            
             <!-- Email -->
-            <label for="email">Email:</label>
-            <input type="email"id="email" required>
-            <br><br>
+            <div class="emailBox">
+                <label for="email">Email:</label>
+                <input type="email"id="email" required>
+            </div>
+
             <!-- Submit -->
-            <input type="submit">
+            <input type="submit" id="submit">
         </form>
     </body>
 </html>
